project/Compiler.java
/* Compiler.java */
/* Generated By:JavaCC: Do not edit this line. Compiler.java */
public class Compiler implements CompilerConstants {
    public static void main(String args[]) throws ParseException
    {
        Compiler parser = new Compiler(System.in);
        Compiler.Program();
    }

  static final public void Program() throws ParseException {
    ImportDeclaration();
    ClassDeclaration();
    jj_consume_token(0);
}

  static final public void ImportDeclaration() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 3:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(3);
      jj_consume_token(IDENTIFIER);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 4:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(4);
        jj_consume_token(IDENTIFIER);
      }
      jj_consume_token(5);
    }
}

  static final public void ClassDeclaration() throws ParseException {
    jj_consume_token(6);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 7:{
      jj_consume_token(7);
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(8);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:
      case 21:
      case 22:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      VarDeclaration();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 10:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      MethodDeclaration();
    }
    jj_consume_token(9);
}

  static final public void VarDeclaration() throws ParseException {
    Type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(5);
}

  static final public void MethodDeclaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 10:{
      jj_consume_token(10);
      Type();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(11);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:
      case 21:
      case 22:{
        Type();
        jj_consume_token(IDENTIFIER);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 12:{
            ;
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            break label_5;
          }
          jj_consume_token(12);
          Type();
          jj_consume_token(IDENTIFIER);
        }
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(13);
      jj_consume_token(8);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case 21:
        case 22:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_6;
        }
        VarDeclaration();
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case INTEGERLITERAL:
        case 8:
        case 11:
        case 23:
        case 25:
        case 27:
        case 28:
        case 29:
        case 30:
        case 31:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        Statement();
      }
      jj_consume_token(14);
      Expression();
      jj_consume_token(5);
      jj_consume_token(9);
      break;
      }{
      jj_consume_token(10);
      jj_consume_token(15);
      jj_consume_token(16);
      jj_consume_token(17);
      jj_consume_token(11);
      jj_consume_token(18);
      jj_consume_token(19);
      jj_consume_token(20);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(13);
      jj_consume_token(8);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case 21:
        case 22:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_8;
        }
        VarDeclaration();
      }
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case INTEGERLITERAL:
        case 8:
        case 11:
        case 23:
        case 25:
        case 27:
        case 28:
        case 29:
        case 30:
        case 31:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_9;
        }
        Statement();
      }
      jj_consume_token(9);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 21:{
      jj_consume_token(21);
      jj_consume_token(19);
      jj_consume_token(20);
      break;
      }
    case 22:{
      jj_consume_token(22);
      break;
      }{
      jj_consume_token(21);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 8:{
      jj_consume_token(8);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case INTEGERLITERAL:
        case 8:
        case 11:
        case 23:
        case 25:
        case 27:
        case 28:
        case 29:
        case 30:
        case 31:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_10;
        }
        Statement();
      }
      jj_consume_token(9);
      break;
      }
    case 23:{
      jj_consume_token(23);
      jj_consume_token(11);
      Expression();
      jj_consume_token(13);
      Statement();
      jj_consume_token(24);
      Statement();
      break;
      }
    case 25:{
      jj_consume_token(25);
      jj_consume_token(11);
      Expression();
      jj_consume_token(13);
      Statement();
      break;
      }
    case IDENTIFIER:
    case INTEGERLITERAL:
    case 11:
    case 27:
    case 28:
    case 29:
    case 30:
    case 31:{
      Expression();
      jj_consume_token(5);
      break;
      }{
      jj_consume_token(IDENTIFIER);
      jj_consume_token(26);
      Expression();
      jj_consume_token(5);
      break;
      }{
      jj_consume_token(IDENTIFIER);
      jj_consume_token(19);
      Expression();
      jj_consume_token(20);
      jj_consume_token(26);
      Expression();
      jj_consume_token(5);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGERLITERAL:{
      jj_consume_token(INTEGERLITERAL);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      break;
      }
    case 27:{
      jj_consume_token(27);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      break;
      }
    case 28:{
      jj_consume_token(28);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      break;
      }
    case 29:{
      jj_consume_token(29);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      break;
      }
    case 30:{
      jj_consume_token(30);
      jj_consume_token(21);
      jj_consume_token(19);
      Expression();
      jj_consume_token(20);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      break;
      }{
      jj_consume_token(30);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(11);
      jj_consume_token(13);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      break;
      }
    case 31:{
      jj_consume_token(31);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      break;
      }
    case 11:{
      jj_consume_token(11);
      Expression();
      jj_consume_token(13);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void ExpressionLRFix() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 32:
    case 33:
    case 34:
    case 35:
    case 36:
    case 37:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 32:{
        jj_consume_token(32);
        break;
        }
      case 33:{
        jj_consume_token(33);
        break;
        }
      case 34:{
        jj_consume_token(34);
        break;
        }
      case 35:{
        jj_consume_token(35);
        break;
        }
      case 36:{
        jj_consume_token(36);
        break;
        }
      case 37:{
        jj_consume_token(37);
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      break;
      }
    case 19:{
      jj_consume_token(19);
      Expression();
      jj_consume_token(20);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      break;
      }
    case 4:{
      jj_consume_token(4);
      jj_consume_token(38);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        ;
      }
      break;
      }{
      jj_consume_token(4);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(11);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:
      case INTEGERLITERAL:
      case 11:
      case 27:
      case 28:
      case 29:
      case 30:
      case 31:{
        Expression();
        label_11:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:
          case INTEGERLITERAL:
          case 11:
          case 27:
          case 28:
          case 29:
          case 30:
          case 31:{
            ;
            break;
            }
          default:
            jj_la1[29] = jj_gen;
            break label_11;
          }
          Expression();
        }
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        ;
      }
      jj_consume_token(13);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 4:
      case 19:
      case 32:
      case 33:
      case 34:
      case 35:
      case 36:
      case 37:{
        ExpressionLRFix();
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public CompilerTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[33];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x8,0x10,0x80,0x600002,0x400,0x1000,0x600002,0x600002,0xfa800906,0x600002,0xfa800906,0x400,0x600002,0xfa800906,0xfa800906,0x80010,0x80010,0x80010,0x80010,0x80010,0x80010,0x80010,0x80010,0x80010,0xf8000806,0x0,0x80010,0x80010,0x80010,0xf8000806,0xf8000806,0x80010,0x80010,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x3f,0x3f,0x3f,0x3f,0x3f,0x3f,0x3f,0x3f,0x3f,0x0,0x3f,0x3f,0x3f,0x3f,0x0,0x0,0x3f,0x3f,};
	}

  /** Constructor with InputStream. */
  public Compiler(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Compiler(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new CompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Compiler(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new CompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new CompilerTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Compiler(CompilerTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(CompilerTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[39];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 33; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 39; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
